faq and content modal popup styles fixed.

--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -443,7 +443,7 @@
 ::ng-deep #sourceSlider {
     .sliderComponent {
         z-index: 100 !important;
-        background: rgba(38, 52, 74,0.5);
+        // background: rgba(38, 52, 74,0.5);
         .sliderDialogComponent{
             width: 65% !important;
             max-width: 65% !important;
