--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -1376,37 +1376,21 @@
 }
 ::ng-deep.addSourceModalComponent{
     .modal-header {
-        padding: 20px 20px 0px;
-        .header-title{
-            position: absolute;
-            left: 17px;
+        padding: 0 !important;
+        height: auto !important;
+        background-color: transparent !important;
+        .header-title{     
+            margin: 0;
+            position: absolute;            
+            top: 13px;
+            left: 30px;
             .closeCross{
                 cursor: pointer;
             }
-        }
-        .table-action-header {
-            height: 50px;
-            display: inline-block;
-            align-items: center;
-            justify-content: space-between;
-            .kr-sg-input-search{
-                margin: 0;
-                width: 250px;
-                display: inline-block;
-                position: relative;
-            }
-            .kr-sg-button-primary {
-                position: absolute;
-                right: 25px;
-                height: 35px;
-                font-size: 14px;
-                display: inline-block;
-                z-index: 9999;
-            }
-        } 
+        }         
     }
     .source-modal-popup{
-        padding: 0 !important;
+        padding: 20px 30px !important;
         height: calc(100vh - 70px);
         .addNewSource{        
             .label-text{
@@ -1437,6 +1421,7 @@
         .kr-sg-data-table{
             section{
                 margin-top: 0 !important;
+                padding: 0 !important;
                 .faqScurceListScroll{
                     height: calc(100vh - 120px);
                     .ps-content{
@@ -1450,50 +1435,19 @@
                         div.empty:first-child {
                             display: block !important;
                           } 
-                      }
+                    }
                 }
                 .last-child {
                     max-width: 90px !important;
                 }
             }
-        }
-        .table-list-content{
-            .kr-sg-data-table{
-                
-                .table-content{
-                    margin-top: 12px;
-                    .table-header{
-                        background: #f3f3f4;
-                        border-bottom: 1px solid #e5e8ec;
-                        .col{
-                            font-weight: bold;
-                            color: #26344a;
-                        }
-                    }
-                    .col{
-                        .action_icon{
-                            width: 16px;
-                            height: 16px;
-                            cursor: pointer;
-                            visibility: hidden;
-                        }
-                    }
-                    .content-body{
-                        &:hover{
-                            .action_icon{
-                                visibility: visible;
-                            }
-                        }
-                    }
-                }          
-            }
-        }   
+        }          
     }
 }
 ::ng-deep #faqsSourceSlider {
     .sliderComponent {
         z-index: 100 !important;
-        background: rgba(38, 52, 74,0.5);
+        // background: rgba(38, 52, 74,0.5);
         .sliderDialogComponent{
             width: 65% !important;
             max-width: 65% !important;
@@ -1570,38 +1524,7 @@
                         max-width: 90px !important;
                     }
                 }
-            }
-            .table-list-content{
-                .kr-sg-data-table{
-                    
-                    .table-content{
-                        margin-top: 12px;
-                        .table-header{
-                            background: #f3f3f4;
-                            border-bottom: 1px solid #e5e8ec;
-                            .col{
-                                font-weight: bold;
-                                color: #26344a;
-                            }
-                        }
-                        .col{
-                            .action_icon{
-                                width: 16px;
-                                height: 16px;
-                                cursor: pointer;
-                                visibility: hidden;
-                            }
-                        }
-                        .content-body{
-                            &:hover{
-                                .action_icon{
-                                    visibility: visible;
-                                }
-                            }
-                        }
-                    }          
-                }
-            }   
+            }               
         }
     }
 }
