--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -105,10 +105,10 @@
 <kr-modal modalType="center" modalClass="sliderComponent" #statusModalPop id="sourceSlider">
   <div class="modal-header">
     <h4 class="header-title">{{selectedSource.name}}</h4>
-    <img src="assets/images/closeCross.png" class="closeCross" (click)="sliderStep?sliderBack():closeStatusModal();">
+    <img src="assets/images/close.svg" class="closeCross" (click)="sliderStep?sliderBack():closeStatusModal();">
   </div>
   <div class="modal-body source-modal-popup">
-    <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll">
+    <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll" class="scroll-table">
       <div class="sliderBody call-history-filter">
         <div class="mainLoadingSpinner" *ngIf="loadingSliderContent" [@fadeInOutAnimation]>
           <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
@@ -145,30 +145,31 @@
             <div class="search-header">
               <div class="kr-sg-input-search">                               
                 <input type="text" placeholder="Search" class="input-search" [(ngModel)]="pagesSearch">
-                <img src="assets/icons/search.svg" class="search-icon">
+                <img src="assets/images/search-input.svg" class="search-icon">
             </div>
-            <button class="kr-sg-button-primary btn_md">Add Page</button>
+            <div class="add-page"><img src="assets/icons/sidemenu/plus-table.svg">Add Page</div>
             </div>
             <div class="accordion-content-info text-left">
               <div class="header-sec row m-0">
-                <div class="col-8 label_text m-0">Pages</div>
-                <div class="col-4 label_text m-0">Created <img src="assets/icons/caretDown.svg" class="ml-1"></div>
+                <div class="col-8 label_text m-0 p-0">Pages</div>
+                <div class="col-4 label_text m-0">Crawled <img src="assets/icons/caretDown.svg" class="ml-1"></div>
               </div>
               <div id="accordion" class="accordion-section">
                 <div class="card_content" *ngFor="let page of selectedSource.pages | filter: [ pagesSearch, 'url']">
                   <div class="card_header">
                     <a class="card_link collapsed" data-toggle="collapse" href="#collapseOne{{page._id}}">
                       <div class="row m-0 content">
-                        <div class="col-8 link-name">{{page.url || selectedSource.url}}</div>
+                        <div class="col-8 link-name p-0" title="{{page.url || selectedSource.url}}">{{page.url || selectedSource.url}}</div>
                         <div class="col-2 date">{{page.createdOn | dateFormatPipe}}</div>
                         <div class="col-2 actions">
-                          <img src="assets/images/return.svg">
-                          <img src="assets/images/trashIcon.svg" (click)="deletePage(page ,$event)">
+                          <img src="assets/icons/sidemenu/table-refresh-2.svg">
+                          <img src="assets/icons/sidemenu/table-refresh.svg">
+                          <img src="assets/icons/sidemenu/delete-table.svg" (click)="deletePage(page ,$event)">
                         </div>
                       </div>
                     </a>
                   </div>
-                  <div id="collapseOne{{page._id}}" class="collapse" data-parent="#accordion">
+                  <div id="collapseOne{{page._id}}" class="collapse pad_adjust" data-parent="#accordion">
                     <div class="card_body" style="padding-left: 30px;">
                       <div class="info-content pageTitleContainer">
                         <div class="row m-0 row_content">
@@ -187,14 +188,14 @@
                         </div>     
                                         
                       </div>
-                      <button class="kr-sg-button-primary btn_md mt-3 mb-3">Check for Updates</button>
+                      <button class="kr-sg-button-primary btn_md mt-3 mb-3 d-none">Check for Updates</button>
                       <div class="label_text">Results Preview</div> 
                       <div class="info-content previewSection">
                         <div class="label_text" *ngIf="page.sections && page.sections.length">{{page.sections[0]}}</div>    
                         <div class="previewContent" *ngIf="!page.searchResultPreview" [innerHtml]="page.body"></div> 
                         <div class="previewContent" *ngIf="page.searchResultPreview" [innerHtml]="page.searchResultPreview"></div>        
                       </div>
-                      <button class="kr-sg-button-primary btn_md mt-3 mb-3">Test & Preview</button>
+                      <button class="kr-sg-button-primary btn_md mt-3 mb-3 d-none">Test & Preview</button>
                     </div>
                   </div>
                 </div>   
@@ -202,33 +203,32 @@
             </div>
           </ng-container>
         </div>
-        <div class="table-view-details mt-3 text-left" *ngIf="sliderStep === 2 && selectedPage">
-          <div class="row m-0 row_table">
-            <div class="col-3 title">Title</div>
-            <div class="col-9 info-content-sec">{{selectedPage.title}}</div>
+        <div class="table-view-details" *ngIf="sliderStep === 2 && selectedPage">
+          <div class="view-details-data">
+            <div class="title">Title</div>
+            <div class="desc-info">{{selectedPage.title}}</div>
           </div>
-          <div class="row m-0 row_table">
-            <div class="col-3 title">Body</div>
-            <div class="col-9 info-content-sec">
-              <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll" class="pageBodyContent">
-              <div class="htmlBodyPreview" [innerHtml]="selectedPage.body"></div>
-             </perfect-scrollbar>
-            </div>
+          <div class="view-details-data">
+            <div class="title">Body</div>
+            <div class="desc-info" [innerHtml]="selectedPage.body"></div>
           </div>
-          <div class="row m-0 row_table">
-            <div class="col-3 title">URL</div>
-            <!-- <ng-container *ngFor="let imageUrl of selectedPage.imageUrl; let index = index "> -->
-            <div class="col-9 info-content-sec" >{{selectedPage.imageUrl}}<img class="external_link" (click)="openImageLink(selectedPage.imageUrl)" src="assets/icons/external-link.svg"></div>
-            <!-- </ng-container> -->
+          <div class="view-details-data">
+            <div class="title">URL</div>
+            <div class="desc-info">{{selectedPage.imageUrl}}<img class="external_link" (click)="openImageLink(selectedPage.imageUrl)" src="assets/icons/sidemenu/external-link.svg"></div>
           </div>
-          <div class="row m-0 row_table">
-            <div class="col-3 title">Published</div>
-            <div class="col-9 info-content-sec" *ngIf="selectedPage.publishedOn">{{selectedPage.publishedOn}}</div>
-            <div class="col-9 info-content-sec" *ngIf="!selectedPage.publishedOn">No publish information available</div>
-          </div>
+          <div class="view-details-data">
+            <div class="title">Published</div>
+            <div class="desc-info">{{selectedPage.publishedOn}}</div>
+            <div class="desc-info" *ngIf="!selectedPage.publishedOn">No publish information available</div>
+          </div>         
         </div>
-      </div>
+      </div>      
     </perfect-scrollbar>
+  </div>
+  <div class="footer-btns d-none">
+    <button class="kr-sg-button-primary btn_lg">Update</button>
+    <button class="kr-sg-button-secondary btn_lg">Recrawl</button>
+    <button class="kr-sg-button-secondary-two btn_lg">Delete</button>
   </div>
 </kr-modal>
 
