fqas content styles updated and suggestions also

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -160,7 +160,7 @@
       </div>
       <div class="modal-footer" [ngClass]="{'centerModel': resourceIDToOpen}">
           <button type="button" class="kr-sg-button-primary btn_md" data-dismiss="modal" (click)="closeStatusModal()">Ok</button>
-          <button type="button" class="kr-sg-button-secondary btn_md" data-dismiss="modal" (click)="closeStatusModal()">Cancel</button>
+          <button type="button" class="kr-sg-button-secondary btn_md d-none" data-dismiss="modal" (click)="closeStatusModal()">Cancel</button>
       </div>
     </div>    
   </div> 
