--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -28,6 +28,7 @@
               <img src="assets/icons/search.svg" class="search-icon">
             </div>
             <button class="kr-sg-button-primary btn_lg" (click)="openCreateApp()">+ Add New</button>
+            <!-- <div class="add-new" (click)="openCreateApp()"><img src="assets/icons/sidemenu/plus-table.svg">Add New</div> -->
             <span class="dropdown createDropDown hide">
               <div class="dropdown-toggle" id="menu1" data-toggle="dropdown">
                 <img class="gray_arrow" src="assets/icons/caretDown.svg">
